# FilmQuest

./: .gitignore  README.md  pyproject.toml
backend/: server.py
backend/question_generator/: config.py  handler.py  models.py  openai_client.py  protocols.py  requirements.txt  service.py
backend/question_generator/prompts/: system.md  user.md
backend/recommender/: config.py  handler.py  models.py  openai_client.py  protocols.py  requirements.txt  service.py  tmdb_client.py
backend/recommender/prompts/: system.md  user.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/components/: AuthPage.tsx  ConfirmForm.tsx  ErrorState.tsx  InlineError.tsx  LoadingScreen.tsx  MovieCard.tsx  MovieModal.tsx  ProgressBar.tsx  QuestionCard.tsx  QuestionnaireSkeleton.tsx  SignInForm.tsx  SignUpForm.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts  auth.ts
frontend/src/pages/: QuestionnairePage.tsx  ResultsPage.tsx
infra/: .gitignore  api_gateway.tf  cloudfront.tf  cognito.tf  lambda_questions.tf  lambda_recommender.tf  outputs.tf  s3.tf  ssm.tf  variables.tf
scripts/: deploy.py
